--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "swiper": "^11.1.9"
   }
 }
